--- a/2/index.html
+++ b/2/index.html
@@ -405,7 +405,7 @@ var line = d3.svg.line.radial()
         return d.x / 180 * Math.PI;
     });
 
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#viz").append("svg")
     .attr("width", diameter)
     .attr("height", diameter)
     .append("g")
