--- a/2/index.html
+++ b/2/index.html
@@ -50,7 +50,7 @@
 
 <body>
 <div id="viz" />
-<script type="text/javascript" src="./d3.js"></script>
+<script type="text/javascript" src="./d3.min.js"></script>
 <script type="text/javascript">
 var classes = [
 
@@ -149,9 +149,9 @@ var classes = [
 {
     "name": "롯데쇼핑",
         "imports": ["대홍기획","디시네마오브코리아","롯데닷컴","롯데리아","롯데자이언츠","엔씨에프","우리홈쇼핑",
-		"코리아세븐","롯데김해개발","롯데로지스틱스","롯데멤버스","롯데백화점마산","롯데상사","롯데송도쇼핑타운",
-		"롯데수원역쇼핑타운","롯데알미늄","롯데역사","롯데인천개발","롯데인천타운","롯데자산개발","롯데카드",
-		"롯데캐피탈","롯데푸드","롯데하이마트","씨에스유통","에프알엘코리아","은평피에프브이","한국에스티엘"]
+        "코리아세븐","롯데김해개발","롯데로지스틱스","롯데멤버스","롯데백화점마산","롯데상사","롯데송도쇼핑타운",
+        "롯데수원역쇼핑타운","롯데알미늄","롯데역사","롯데인천개발","롯데인천타운","롯데자산개발","롯데카드",
+        "롯데캐피탈","롯데푸드","롯데하이마트","씨에스유통","에프알엘코리아","은평피에프브이","한국에스티엘"]
 },
 {
     "name": "롯데아사히주류",
@@ -180,7 +180,7 @@ var classes = [
 {
     "name": "롯데자산개발",
         "imports": ["동교청기와피에프브이", "롯데송도쇼핑타운", "롯데수원역쇼핑타운","마곡지구피에프이브", 
-		"유니버셜스튜디오코리아리조트개발", "유니버셜스튜디오코리아리조트자산관리", "은평피에프브이","장교프로젝트금융투자"]
+        "유니버셜스튜디오코리아리조트개발", "유니버셜스튜디오코리아리조트자산관리", "은평피에프브이","장교프로젝트금융투자"]
 },
 {
     "name": "롯데자이언츠",
@@ -193,12 +193,12 @@ var classes = [
 {
     "name": "롯데제과",
         "imports": ["롯데닷컴","롯데리아","롯데자이언츠","코리아세븐","롯데로지스틱스","롯데쇼핑","롯데역사",
-		"롯데자산개발","롯데정보통신","롯데칠성음료","롯데푸드","한국후지필름"]
+        "롯데자산개발","롯데정보통신","롯데칠성음료","롯데푸드","한국후지필름"]
 },
 {
     "name": "롯데칠성음료",
         "imports": ["롯데닷컴","롯데리아","롯데아사히주류","롯데자이언츠","백학음료","충북소주","롯데건설","롯데로지스틱스",
-		"롯데쇼핑","롯데자산개발","롯데정보통신","롯데캐피탈","롯데푸드","씨에이치음료","엠제이에이와인","한국후지필름"]
+        "롯데쇼핑","롯데자산개발","롯데정보통신","롯데캐피탈","롯데푸드","씨에이치음료","엠제이에이와인","한국후지필름"]
 },
 {
     "name": "롯데제이티비",
@@ -215,7 +215,7 @@ var classes = [
 {
     "name": "롯데케미칼",
         "imports": ["씨텍","케이피켐텍","데크항공","롯데건설","롯데로지스틱스","롯데미쓰이화학","롯데베르살리스엘라스토머스",
-		"롯데알미늄","롯데엠알시","롯데자산개발","롯데푸드","삼박엘에프티"]
+        "롯데알미늄","롯데엠알시","롯데자산개발","롯데푸드","삼박엘에프티"]
 },
 {
     "name": "롯데푸드",
@@ -248,7 +248,7 @@ var classes = [
 {
     "name": "부산롯데호텔",
         "imports": ["롯데리아","마이비","부산롯데호텔","호텔롯데","롯데멤버스","롯데손해보험","롯데쇼핑",
-		"롯데알미늄","롯데역사","롯데카드","롯데캐피탈","롯데푸드"]
+        "롯데알미늄","롯데역사","롯데카드","롯데캐피탈","롯데푸드"]
 },
 
 {
@@ -374,9 +374,9 @@ var classes = [
 {
     "name": "호텔롯데",
         "imports": ["대홍기획", "롯데닷컴", "롯데리아", "동교청기와피에프브이", "롯데건설", "롯데디에프글로벌",
-		"롯데로지스틱스", "롯데물산", "롯데상사","롯데손해보험", "롯데쇼핑","롯데알미늄", "롯데인천개발", "롯데자산개발", 
-		"롯데정보통신","롯데캐피탈", "롯데케미칼", "롯데푸드", "유니버셜스튜디오코리아리조트개발", "장교프로젝트금융투자", 
-		"캐논코리아비즈니스솔루션", "한국후지필름"]
+        "롯데로지스틱스", "롯데물산", "롯데상사","롯데손해보험", "롯데쇼핑","롯데알미늄", "롯데인천개발", "롯데자산개발", 
+        "롯데정보통신","롯데캐피탈", "롯데케미칼", "롯데푸드", "유니버셜스튜디오코리아리조트개발", "장교프로젝트금융투자", 
+        "캐논코리아비즈니스솔루션", "한국후지필름"]
 }
 
 ];
@@ -514,7 +514,7 @@ function mouseouted(d) {
         .classed("node--source", false);
 }
 
-d3.select(self.frameElement).style("height", diameter + "px");
+//d3.select(self.frameElement).style("height", diameter + "px");
 
 // Lazily construct the package hierarchy from class names.
 function packageHierarchy(classes) {
@@ -566,6 +566,7 @@ function packageImports(nodes) {
 
     return imports;
 }
+
 </script>
 
 </body>
