--- a/2/index.html
+++ b/2/index.html
@@ -406,8 +406,8 @@ var line = d3.svg.line.radial()
     });
 
 var svg = d3.select("#viz").append("svg")
-    .attr("width", diameter)
-    .attr("height", diameter)
+    .attr("width", '1000')
+    .attr("height", '860')
     .append("g")
     .attr("transform",
           "translate(" + radius + "," + radius + ")");
